- Changed healthcare_dataset_smoke_df to only display 5 rows - Added correlation between smoking history and Heart Disease

--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -1890,7 +1890,7 @@
     "# What's the correlation between smoking history and the three diseases? (Clean up: drop the “No Info”) (Kenway)\n",
     "# Remove rows with 'No Info' in smoking_status column\n",
     "healthcare_dataset_smoke_df = healthcare_dataset_df[healthcare_dataset_df['smoking_history'] != 'No Info']\n",
-    "healthcare_dataset_smoke_df.head(50)"
+    "healthcare_dataset_smoke_df.head()"
    ]
   },
   {
