- Added section headers to help organize the page -  added a # Correlation between age and having any of the 3 diseases and apply results from population data in AZ

--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c83ea793",
+   "metadata": {},
+   "source": [
+    "# Dependencies and clean up "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "id": "300d3434",
    "metadata": {},
    "outputs": [],
@@ -17,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "id": "1111dd1c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "id": "13c55957",
    "metadata": {},
    "outputs": [
@@ -203,7 +211,7 @@
        "4                True          False  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "id": "79a2353e",
    "metadata": {},
    "outputs": [
@@ -245,7 +253,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "id": "a9bc551f",
    "metadata": {},
    "outputs": [],
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "id": "996a9422",
    "metadata": {},
    "outputs": [
@@ -435,7 +443,7 @@
        "4                True          False  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 88,
    "id": "e7ee30df",
    "metadata": {},
    "outputs": [
@@ -615,7 +623,7 @@
        "4                True          False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +636,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad2e1d70",
+   "metadata": {},
+   "source": [
+    "# Correlation between each disease and age"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 89,
    "id": "fc77db02",
    "metadata": {},
    "outputs": [
@@ -649,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "id": "d10ee930",
    "metadata": {},
    "outputs": [
@@ -677,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "id": "1126ed74",
    "metadata": {},
    "outputs": [
@@ -697,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 92,
    "id": "2ba13eb1",
    "metadata": {},
    "outputs": [
@@ -1041,8 +1057,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d562d127",
+   "execution_count": null,
+   "id": "14938b5e",
    "metadata": {},
    "outputs": [
     {
@@ -1214,9 +1230,8 @@
        "13               False          False        False  "
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1229,8 +1244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9aea7eff",
+   "execution_count": null,
+   "id": "881b5ab7",
    "metadata": {},
    "outputs": [
     {
@@ -2003,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "id": "b48b0f8e",
    "metadata": {},
    "outputs": [
@@ -2018,8 +2033,6 @@
    ],
    "source": [
     "# Calculate the percentage of the population over 60 that will suffer from at least one of the 3 diseases\n",
-    "# any_disease_over_60\n",
-    "\n",
     "any_disease_over_60_true = any_disease_over_60[True]\n",
     "any_disease_over_60_false = any_disease_over_60[False]\n",
     "total_responses = any_disease_over_60_true + any_disease_over_60_false\n",
@@ -2029,12 +2042,60 @@
     "\n",
     "# of the 21%, 40% of them will sufer at lease one of the 3 diseases\n",
     "az_pop_over_60_affected_percent = (total_over/total_under) * percentage_over_60_affected\n",
-    "az_pop_over_60_affected\n",
     "\n",
     "# calculate how many people in AZ will suffer from at least one of the 3 diseases\n",
     "az_pop_over_60_affected_number = round((az_pop_over_60_affected_percent/100) * total_population).iloc[0]\n",
     "formatted_number = \"{:,}\".format(az_pop_over_60_affected_number)\n",
     "print(f'{formatted_number} people in Arizona are over 60 and suffering from at least one of the 3 diseases')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13f99905",
+   "metadata": {},
+   "source": [
+    "# Correlation between age and having any of the 3 diseases "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "92798ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANY_DISEASE\n",
+      "False    80191\n",
+      "True     15956\n",
+      "Name: count, dtype: int64\n",
+      "16.60% of the population will suffer from at least one of the 3 diseases\n",
+      "1,190,270.0 people in the dataset are suffering from at least one of the 3 diseases\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataframe with a new column 'ANY_DISEASE' that is True if the patient has any of the 3 diseases\n",
+    "healthcare_dataset_df['ANY_DISEASE'] = healthcare_dataset_df['HYPERTENSION_BOOL'] | healthcare_dataset_df['HEART_DISEASE_BOOL'] | healthcare_dataset_df['DIABETES_BOOL']\n",
+    "any_disease_count = healthcare_dataset_df['ANY_DISEASE'].value_counts()\n",
+    "healthcare_dataset_df.head()\n",
+    "\n",
+    "print(any_disease_count)\n",
+    "\n",
+    "any_disease_count_true = any_disease_count[True]\n",
+    "any_disease_count_false = any_disease_count[False]\n",
+    "total_responses_any_disease = any_disease_count_true + any_disease_count_false\n",
+    "percentage_affected = (any_disease_count_true / total_responses_any_disease) * 100\n",
+    "print(f'{percentage_affected:.2f}% of the population will suffer from at least one of the 3 diseases')\n",
+    "\n",
+    "# calculate how many people in the dataset will suffer from at least one of the 3 diseases\n",
+    "total_az_pop_affected_number = round((percentage_affected/100) * total_population).iloc[0]\n",
+    "formatted_number = \"{:,}\".format(total_az_pop_affected_number)\n",
+    "print(f'{formatted_number} people in the dataset are suffering from at least one of the 3 diseases')\n",
+    "\n",
     "\n"
    ]
   }
