Updated code to add correlation between bmi and diabetes and blood glucose level and diabetes
Updated code to add correlation between bmi and diabetes and blood glucose level and diabetes

--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 108,
    "id": "4a6b3b57",
    "metadata": {},
    "outputs": [
@@ -645,7 +645,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Correlation between BMI and Blood Glucose Level: 0.09254270590695594\n"
+      "Correlation between blood glucose level and diabetes: 0.42433583557906723\n",
+      "Correlation between BMI and diabetes: 0.21493169995887634\n"
      ]
     },
     {
@@ -665,11 +666,13 @@
     "blood_glucose_level = healthcare_dataset_df['BLOOD_GLUCOSE_LEVEL']\n",
     "diabetes = healthcare_dataset_df['DIABETES']\n",
     "\n",
-    "# Calculate correlation\n",
-    "correlation_bmi_glucose = bmi.corr(blood_glucose_level)\n",
+    "# Calculate correlation between bmi and diabetes and blood glucose level and diabetes\n",
+    "correlation_diabetes_glucose = diabetes.corr(blood_glucose_level)\n",
+    "correlation_diabetes_bmi = diabetes.corr(bmi)\n",
     "\n",
     "# Print correlation\n",
-    "print(f'Correlation between BMI and Blood Glucose Level: {correlation_bmi_glucose}')\n",
+    "print(f'Correlation between blood glucose level and diabetes: {correlation_diabetes_glucose}')\n",
+    "print(f'Correlation between BMI and diabetes: {correlation_diabetes_bmi}')\n",
     "\n",
     "# Create a scatter plot\n",
     "plt.figure(figsize=(10, 6))\n",
