--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -678,7 +678,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "colors = ['blue' if status == 0 else 'red' for status in diabetes]\n",
     "plt.scatter(bmi, blood_glucose_level, c=colors, alpha=0.7)\n",
-    "plt.title('Correlation between BMI and Blood Glucose Level')\n",
+    "plt.title('Correlation between BMI Blood Glucose Level')\n",
     "plt.xlabel('BMI')\n",
     "plt.ylabel('Blood Glucose Level')\n",
     "plt.legend(handles=[plt.Line2D([0], [0], marker='o', color='w', markerfacecolor='blue', markersize=10, label='No Diabetes'),\n",
