- Set up section to look into former smoker age distribution - set up code block to compare 60+ only to under - Added Age distribution based on smiking history

--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -1281,6 +1281,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2d52c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distribution of having all 3 diseases in patients under 60"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "af94bfd3",
    "metadata": {},
@@ -1655,6 +1665,69 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5ad8ecd",
+   "metadata": {},
+   "source": [
+    "# Look into the \"Former\" Smokers. Look at the age distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13f99905",
+   "metadata": {},
+   "source": [
+    "# Create new 'ANY_DISEASE' Column to track how many likely it is for 60+ patients to have any of the 3 diseses "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "92798ca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANY_DISEASE\n",
+      "False    80191\n",
+      "True     15956\n",
+      "Name: count, dtype: int64\n",
+      "16.60% of the population will suffer from at least one of the 3 diseases\n",
+      "Correlation between age and any disease is : 0.40\n",
+      "1,190,270.0 people in the dataset are suffering from at least one of the 3 diseases\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataframe with a new column 'ANY_DISEASE' that is True if the patient has any of the 3 diseases\n",
+    "healthcare_dataset_df['ANY_DISEASE'] = healthcare_dataset_df['HYPERTENSION_BOOL'] | healthcare_dataset_df['HEART_DISEASE_BOOL'] | healthcare_dataset_df['DIABETES_BOOL']\n",
+    "any_disease_count = healthcare_dataset_df['ANY_DISEASE'].value_counts()\n",
+    "healthcare_dataset_df.head()\n",
+    "\n",
+    "print(any_disease_count)\n",
+    "\n",
+    "any_disease_count_true = any_disease_count[True]\n",
+    "any_disease_count_false = any_disease_count[False]\n",
+    "total_responses_any_disease = any_disease_count_true + any_disease_count_false\n",
+    "percentage_affected = (any_disease_count_true / total_responses_any_disease) * 100\n",
+    "print(f'{percentage_affected:.2f}% of the population will suffer from at least one of the 3 diseases')\n",
+    "\n",
+    "# Corelation between age and any disease\n",
+    "correlation_age_any_disease, _ = pearsonr(healthcare_dataset_df['AGE'], healthcare_dataset_df['ANY_DISEASE'])\n",
+    "print(f\"Correlation between age and any disease is : {correlation_age_any_disease:.2f}\")\n",
+    "\n",
+    "\n",
+    "# calculate how many people in the dataset will suffer from at least one of the 3 diseases\n",
+    "total_az_pop_affected_number = round((percentage_affected/100) * total_population).iloc[0]\n",
+    "formatted_number = \"{:,}\".format(total_az_pop_affected_number)\n",
+    "print(f'{formatted_number} people in the dataset are suffering from at least one of the 3 diseases')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "044ae3af",
    "metadata": {},
    "source": [
@@ -1929,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "id": "956e3443",
    "metadata": {},
    "outputs": [
@@ -2061,68 +2134,6 @@
     "formatted_number = \"{:,}\".format(az_pop_over_60_affected_number)\n",
     "print(f'{formatted_number} people in Arizona are over 60 and suffering from at least one of the 3 diseases')\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13f99905",
-   "metadata": {},
-   "source": [
-    "# How many people in AZ are over 60 and suffer one of the 3 diseases "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "92798ca1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ANY_DISEASE\n",
-      "False    80191\n",
-      "True     15956\n",
-      "Name: count, dtype: int64\n",
-      "16.60% of the population will suffer from at least one of the 3 diseases\n",
-      "Correlation between age and any disease is : 0.40\n",
-      "1,190,270.0 people in the dataset are suffering from at least one of the 3 diseases\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create a dataframe with a new column 'ANY_DISEASE' that is True if the patient has any of the 3 diseases\n",
-    "healthcare_dataset_df['ANY_DISEASE'] = healthcare_dataset_df['HYPERTENSION_BOOL'] | healthcare_dataset_df['HEART_DISEASE_BOOL'] | healthcare_dataset_df['DIABETES_BOOL']\n",
-    "any_disease_count = healthcare_dataset_df['ANY_DISEASE'].value_counts()\n",
-    "healthcare_dataset_df.head()\n",
-    "\n",
-    "print(any_disease_count)\n",
-    "\n",
-    "any_disease_count_true = any_disease_count[True]\n",
-    "any_disease_count_false = any_disease_count[False]\n",
-    "total_responses_any_disease = any_disease_count_true + any_disease_count_false\n",
-    "percentage_affected = (any_disease_count_true / total_responses_any_disease) * 100\n",
-    "print(f'{percentage_affected:.2f}% of the population will suffer from at least one of the 3 diseases')\n",
-    "\n",
-    "# Corelation between age and any disease\n",
-    "correlation_age_any_disease, _ = pearsonr(healthcare_dataset_df['AGE'], healthcare_dataset_df['ANY_DISEASE'])\n",
-    "print(f\"Correlation between age and any disease is : {correlation_age_any_disease:.2f}\")\n",
-    "\n",
-    "# calculate how many people in the dataset will suffer from at least one of the 3 diseases\n",
-    "total_az_pop_affected_number = round((percentage_affected/100) * total_population).iloc[0]\n",
-    "formatted_number = \"{:,}\".format(total_az_pop_affected_number)\n",
-    "print(f'{formatted_number} people in the dataset are suffering from at least one of the 3 diseases')\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5ad8ecd",
-   "metadata": {},
-   "source": [
-    "# Look into the \"Former\" Smokers. Look at the age distribution"
    ]
   }
  ],
