- Cleared the outputs

--- a/PPP.ipynb
+++ b/PPP.ipynb
@@ -268,16 +268,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2d52c8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Distribution of having all 3 diseases in patients under 60"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "af94bfd3",
    "metadata": {},
@@ -300,7 +290,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9528f2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,16 +405,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5ad8ecd",
+   "id": "98e30b22",
    "metadata": {},
    "source": [
-    "# Age distribution based on smoking history"
+    "# Age distribution based on smoking history\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb0a2ca",
+   "id": "873d3bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,13 +428,13 @@
     "plt.title('Age Distribution of Former Smokers')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Count')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d30226e8",
+   "id": "538ad63f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,14 +448,13 @@
     "plt.title('Age Distribution of Current Smokers')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Count')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d3469e5",
+   "id": "02bbafe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a01c594b",
+   "id": "d03f5aae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,47 +489,6 @@
     "plt.xlabel('Age')\n",
     "plt.ylabel('Count')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13f99905",
-   "metadata": {},
-   "source": [
-    "# Create new 'ANY_DISEASE' Column to track how many likely it is for 60+ patients to have any of the 3 diseses "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92798ca1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a dataframe with a new column 'ANY_DISEASE' that is True if the patient has any of the 3 diseases\n",
-    "healthcare_dataset_df['ANY_DISEASE'] = healthcare_dataset_df['HYPERTENSION_BOOL'] | healthcare_dataset_df['HEART_DISEASE_BOOL'] | healthcare_dataset_df['DIABETES_BOOL']\n",
-    "any_disease_count = healthcare_dataset_df['ANY_DISEASE'].value_counts()\n",
-    "healthcare_dataset_df.head()\n",
-    "\n",
-    "print(any_disease_count)\n",
-    "\n",
-    "any_disease_count_true = any_disease_count[True]\n",
-    "any_disease_count_false = any_disease_count[False]\n",
-    "total_responses_any_disease = any_disease_count_true + any_disease_count_false\n",
-    "percentage_affected = (any_disease_count_true / total_responses_any_disease) * 100\n",
-    "print(f'{percentage_affected:.2f}% of the population will suffer from at least one of the 3 diseases')\n",
-    "\n",
-    "# Corelation between age and any disease\n",
-    "correlation_age_any_disease, _ = pearsonr(healthcare_dataset_df['AGE'], healthcare_dataset_df['ANY_DISEASE'])\n",
-    "print(f\"Correlation between age and any disease is : {correlation_age_any_disease:.2f}\")\n",
-    "\n",
-    "\n",
-    "# calculate how many people in the dataset will suffer from at least one of the 3 diseases\n",
-    "total_az_pop_affected_number = round((percentage_affected/100) * total_population).iloc[0]\n",
-    "formatted_number = \"{:,}\".format(total_az_pop_affected_number)\n",
-    "print(f'{formatted_number} people in the dataset are suffering from at least one of the 3 diseases')\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -790,6 +737,42 @@
     "az_pop_over_60_affected_number = round((az_pop_over_60_affected_percent/100) * total_population).iloc[0]\n",
     "formatted_number = \"{:,}\".format(az_pop_over_60_affected_number)\n",
     "print(f'{formatted_number} people in Arizona are over 60 and suffering from at least one of the 3 diseases')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13f99905",
+   "metadata": {},
+   "source": [
+    "# Correlation between age and having any of the 3 diseases "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92798ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dataframe with a new column 'ANY_DISEASE' that is True if the patient has any of the 3 diseases\n",
+    "healthcare_dataset_df['ANY_DISEASE'] = healthcare_dataset_df['HYPERTENSION_BOOL'] | healthcare_dataset_df['HEART_DISEASE_BOOL'] | healthcare_dataset_df['DIABETES_BOOL']\n",
+    "any_disease_count = healthcare_dataset_df['ANY_DISEASE'].value_counts()\n",
+    "healthcare_dataset_df.head()\n",
+    "\n",
+    "print(any_disease_count)\n",
+    "\n",
+    "any_disease_count_true = any_disease_count[True]\n",
+    "any_disease_count_false = any_disease_count[False]\n",
+    "total_responses_any_disease = any_disease_count_true + any_disease_count_false\n",
+    "percentage_affected = (any_disease_count_true / total_responses_any_disease) * 100\n",
+    "print(f'{percentage_affected:.2f}% of the population will suffer from at least one of the 3 diseases')\n",
+    "\n",
+    "# calculate how many people in the dataset will suffer from at least one of the 3 diseases\n",
+    "total_az_pop_affected_number = round((percentage_affected/100) * total_population).iloc[0]\n",
+    "formatted_number = \"{:,}\".format(total_az_pop_affected_number)\n",
+    "print(f'{formatted_number} people in the dataset are suffering from at least one of the 3 diseases')\n",
+    "\n",
     "\n"
    ]
   }
