Corrections to PPP_main

--- a/PPP_main.ipynb
+++ b/PPP_main.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import pearsonr \n",
     "from pathlib import Path\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -269,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "***Pie chart of 60+ only, percent true or false for each disease"
+    "### Pie chart of 60+ only, percent true or false for each disease"
    ]
   },
   {
